--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@
                                     <div class="music-img">
                                         <img src="img/music-img.png" alt="">
                                     </div>
-                                    <div class="about-music">
+                                    <div class="aboutmusic">
                                         <div class="a">
-                                            <div class="user"></div>    
+                                            <div class="user">Испонитель</div>    
                                             <div class="speed__rate"></div>
                                             <div class="release"></div>
                                             <div class="tags"></div>
