Change all codes

--- a/page-2.html
+++ b/page-2.html
@@ -54,8 +54,18 @@
                                 </div>
                             </div>
                         <div class="music-buttons">
-                            <div class="play-btn"></div>
-                            <a href="musics/Bag'ritosh.mp3" download=""><div class="download"></div></a>
+                            <div class="play-btn">
+                                <p>Слушать</p>
+                                <svg width="16" height="18" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 7.26795C16.3333 8.03775 16.3333 9.96225 15 10.7321L3 17.6603C1.66667 18.4301 2.44076e-07 17.4678 2.25717e-07 15.9282L6.04806e-08 2.0718C4.2121e-08 0.532197 1.66667 -0.430054 3 0.339747L15 7.26795Z" fill="white"/>
+                                </svg>
+                                </div>
+                            <a href="musics/Bag'ritosh.mp3" download=""><div class="download">
+                                <p>Скачать</p>
+                                <svg width="14" height="18" viewBox="0 0 14 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M7.99802 10.1756L11.2428 6.93096C11.6334 6.54044 12.2666 6.54044 12.6571 6.93096C13.0476 7.32149 13.0476 7.95465 12.6571 8.34517L7 14.002L1.34291 8.34517C0.952365 7.95465 0.952365 7.32149 1.34291 6.93096C1.73345 6.54044 2.36664 6.54044 2.75718 6.93096L5.99802 10.1717V0.97519C5.99802 0.464249 6.44574 0.0500488 6.99802 0.0500488C7.5503 0.0500488 7.99802 0.464249 7.99802 0.97519V10.1756ZM1 16H13C13.5523 16 14 16.4478 14 17C14 17.5523 13.5523 18 13 18H1C0.447715 18 0 17.5523 0 17C0 16.4478 0.447715 16 1 16Z" fill="white"/>
+                                    </svg>                                 
+                            </div></a>
                             </div>
                         <div class="music-text">
                             <p class="full-text">
@@ -65,7 +75,6 @@
                                 O'zim majnun bo'lib kettim<br>                
                             </p>
                             <button class="full__text">Full Text</button>
-                            <!-- <button class="full__text-close">o'chir</button> -->
                         </div>    
                             </div>
                         <h2>Похожие треки</h2>
