--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     </div>
                 <div class="tabheader">
                 <div class="tabheader-items">
-                    <div class="tabheader__item">1</div>
+                    <div class="tabheader__item active">1</div>
                     <div class="tabheader__item">2</div>
                     <div class="tabheader__item">3</div>
                     <div class="tabheader__item">4</div>
@@ -506,7 +506,9 @@
             </div>
             <div class="player-length">
                 <p class="start">01:24</p>
-                <div class="length"></div>
+                <div class="length">
+                    <div class="e"></div>
+                </div>
                 <p class="end">03:36</p>
             </div>
             
